// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product resolver product mutation createProduct creates a new Product 1`] = `
Object {
  "description": "A baked potato",
  "id": "21",
  "image": "baked-potato",
  "languageCode": "en",
  "name": "en Baked Potato",
  "optionGroups": Array [],
  "slug": "en-baked-potato",
  "translations": Array [
    Object {
      "description": "A baked potato",
      "languageCode": "en",
      "name": "en Baked Potato",
      "slug": "en-baked-potato",
    },
    Object {
      "description": "Eine baked Erdapfel",
      "languageCode": "de",
      "name": "de Baked Potato",
      "slug": "de-baked-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation updateProduct updates a Product 1`] = `
Object {
  "description": "A blob of mashed potato",
  "id": "21",
  "image": "mashed-potato",
  "languageCode": "en",
  "name": "en Mashed Potato",
  "optionGroups": Array [],
  "slug": "en-mashed-potato",
  "translations": Array [
    Object {
      "description": "A blob of mashed potato",
      "languageCode": "en",
      "name": "en Mashed Potato",
      "slug": "en-mashed-potato",
    },
    Object {
      "description": "Eine blob von gemashed Erdapfel",
      "languageCode": "de",
      "name": "de Mashed Potato",
      "slug": "de-mashed-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation variants applyFacetValuesToProductVariants adds facets to variants 1`] = `
Array [
  Object {
    "facetValues": Array [
      Object {
        "code": "Wisoky_-_Spinka",
        "id": "1",
        "name": "Wisoky - Spinka",
      },
      Object {
        "code": "Bosco_LLC",
        "id": "3",
        "name": "Bosco LLC",
      },
      Object {
        "code": "Hilll_-_Auer",
        "id": "5",
        "name": "Hilll - Auer",
      },
    ],
    "id": "41",
    "image": "new-image",
    "languageCode": "en",
    "name": "en Mashed Potato Small",
    "options": Array [
      Object {
        "code": "small",
        "id": "1",
        "languageCode": "en",
        "name": "Small",
      },
    ],
    "price": 432,
    "sku": "ABC",
    "translations": Array [
      Object {
        "id": "81",
        "languageCode": "en",
        "name": "en Mashed Potato Small",
      },
    ],
  },
  Object {
    "facetValues": Array [
      Object {
        "code": "Wisoky_-_Spinka",
        "id": "1",
        "name": "Wisoky - Spinka",
      },
      Object {
        "code": "Bosco_LLC",
        "id": "3",
        "name": "Bosco LLC",
      },
      Object {
        "code": "Hilll_-_Auer",
        "id": "5",
        "name": "Hilll - Auer",
      },
    ],
    "id": "42",
    "image": "",
    "languageCode": "en",
    "name": "en Mashed Potato Large",
    "options": Array [
      Object {
        "code": "large",
        "id": "2",
        "languageCode": "en",
        "name": "Large",
      },
    ],
    "price": 123,
    "sku": "ABC",
    "translations": Array [
      Object {
        "id": "82",
        "languageCode": "en",
        "name": "en Mashed Potato Large",
      },
    ],
  },
]
`;

exports[`Product resolver product mutation variants generateVariantsForProduct generates variants 1`] = `
Array [
  Object {
    "facetValues": Array [],
    "id": "41",
    "image": "",
    "languageCode": "en",
    "name": "en Mashed Potato Small",
    "options": Array [
      Object {
        "code": "small",
        "id": "1",
        "languageCode": "en",
        "name": "Small",
      },
    ],
    "price": 123,
    "sku": "ABC",
    "translations": Array [
      Object {
        "id": "81",
        "languageCode": "en",
        "name": "en Mashed Potato Small",
      },
    ],
  },
  Object {
    "facetValues": Array [],
    "id": "42",
    "image": "",
    "languageCode": "en",
    "name": "en Mashed Potato Large",
    "options": Array [
      Object {
        "code": "large",
        "id": "2",
        "languageCode": "en",
        "name": "Large",
      },
    ],
    "price": 123,
    "sku": "ABC",
    "translations": Array [
      Object {
        "id": "82",
        "languageCode": "en",
        "name": "en Mashed Potato Large",
      },
    ],
  },
]
`;

exports[`Product resolver product mutation variants updateProductVariants updates variants 1`] = `
Array [
  Object {
    "facetValues": Array [],
    "id": "41",
    "image": "new-image",
    "languageCode": "en",
    "name": "en Mashed Potato Small",
    "options": Array [
      Object {
        "code": "small",
        "id": "1",
        "languageCode": "en",
        "name": "Small",
      },
    ],
    "price": 432,
    "sku": "ABC",
    "translations": Array [
      Object {
        "id": "81",
        "languageCode": "en",
        "name": "en Mashed Potato Small",
      },
    ],
  },
]
`;
